--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: demo_test_development
   pool: 5
-  username: dave
+  username: Jake Johnson
   password:
   timeout: 5000
 
@@ -49,6 +49,6 @@ test:
   encoding: unicode
   database: demo_test_test
   pool: 5
-  username: dave
+  username: Jake Johnson
   password:
   timeout: 5000
