--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: fuel-economy-calculator_development
   pool: 5
-  username: Jake Johnson
+  username: jakejohnson
   password:
   timeout: 5000
 
@@ -49,6 +49,6 @@ test:
   encoding: unicode
   database: fuel-economy-calculator_test
   pool: 5
-  username: Jake Johnson
+  username: jakejohnson
   password:
   timeout: 5000
